# CasinoLite

./: CMakeLists.txt
Assets/Shaders/: fragment.glsl  vertex.glsl
Core/: Application.cpp  Application.hpp  BasicGame.hpp  Game.hpp  GameManager.cpp  GameManager.hpp  Window.cpp  Window.hpp
Core/Games/: Blackjack.cpp  Blackjack.hpp  Games.hpp  GoFish.cpp  GoFish.hpp  MainMenu.cpp  MainMenu.hpp  Poker.cpp  Poker.hpp  Roulette.cpp  Roulette.hpp  Slots.cpp  Slots.hpp
GUI/: GUI.cpp  GUI.hpp
Renderer/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
